# caveclaw

./: .env.example  README.md  future.md  main.py  models.json  pyproject.toml  todo.md
Agent_Prototype/: README.md  __init__.py  mainchat_agent.py
Agent_Prototype/data/: fake_sales.csv
agent_core/: README.md  __init__.py  agent.py  agent_loop.py  assistant_stream.py  compaction.py  inspector.py  openclaw_agent_loop_readme.md  runtime_projection.py  tool_execution.py  types.py
agent_core/assistant_messages/: README.md  __init__.py  assistant_stream.py  content_blocks.py  messages.py  runtime.py  state.py  tools.py  transform_messages.py  types.py
agent_core/core/: README.md  __init__.py  agent.py  agent_loop.py  compaction.py  handoff.py  inspector.py  runtime_projection.py  session_context.py  (+1 more)
docs/: README.md
examples/: README.md
scripts/: README.md  list_gemini_models.py
src/: agent_loop.py  openclaw_agent_loop_readme.md
tests/: README.md  test_agent.py  test_agent_loop.py  test_agent_message.py  test_agent_scenarios.py  test_anthropic_provider.py  test_azure_provider.py  test_compaction.py  test_compat.py  test_cross_provider_handoff.py  test_google_provider.py  test_handoff.py  test_handoff_matrix.py  test_inspector.py  test_llm_provider_api.py  test_llm_wrapper.py  test_main_dataframe_flow.py  test_mainchat_agent_prototype.py  test_message_codec.py  test_minimax_provider.py  test_model_registry.py  test_model_resolver.py  test_openai_provider.py  test_provider.py  test_python_program_execution.py  test_transform_messages.py  test_validation.py
(+49 files in other folders)
