[project]
name = "caveclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "volcengine-python-sdk[ark]>=5.0.15",
]
